Fix layout bug on mobile devices
Add media query to pad the top when the navbar collapses on mobile devices.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -94,3 +94,14 @@ body {
     padding-top: 164px;
   }
 }
+
+/* Pad the top when navbar collapses on mobile devices */
+@media (max-width: 991px) {
+  .header-container {
+    padding-top: 116px;
+  }
+
+  body {
+    height: calc(100vh - 116px);
+  }
+}
